--- a/part1/exercises/src/components/MovieList.module.css
+++ b/part1/exercises/src/components/MovieList.module.css
@@ -1,7 +1,8 @@
 .movieText {
-   color: black;
+  color: green;
+  font-size: 1.3vh;
 }
 
 .movieHeading {
-   color: black;
+  text-align: left;
 }
