--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,10 @@
 .choresText {
-   color: black;
+  color: blue;
+  font-size: 1.2vh;
+  font-style: italic;
 }
 
 .choresHeading {
-   color: black;
+  color: black;
+  text-decoration: underline;
 }
